http stream配置新增启动共享http后端能力，前端聊天窗口显示当前支持的extension
